Fix the height of header to 85px, so the image never overlap it

--- a/style/default.css
+++ b/style/default.css
@@ -18,7 +18,7 @@
  * DESCRIPTION:
  * General styles for the web interface of SlackPack
  * Media: screen, print
- * Revision: $Id: default.css,v 1.54 2012/07/08 11:11:39 gsotirov Exp $
+ * Revision: $Id: default.css,v 1.55 2014/03/01 05:56:52 gsotirov Exp $
  */
 
 @media screen, print {
@@ -277,7 +277,7 @@
     background-color: #00c;
     border-bottom: 2px solid #000;
     color: #fff;
-    height: 6em;
+    height: 85px;
     margin: 0;
     padding: 0;
   }
